<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mensa Uni Potsdam</string>
    <string name="share_menu">Gericht teilen</string>
    <string name="initializing">Initialisiere..</string>
    <string name="loading_menu">Lade Speiseplan..</string>
    <string name="error_network">Netzwerkfehler</string>
    <string name="error_parsing">Unerwartete Antwort vom Server</string>

    <string name="date_today">Heute</string>
    <string name="date_tomorrow">Morgen</string>
    <string name="date_aftertomorrow">Übermorgen</string>
    <string name="unkown">Unbekannt</string>

    <string name="info_meal_category">Keine Daten</string>
    <string name="info_meal_name">Es ist leider kein Speiseplan verfügbar</string>
    <string name="mensa_potsdam">Uni Potsdam</string>
    <string name="mensa_ulf">Ulf\'s Café</string>
    <string name="action_settings">Optionen</string>
    <string name="action_about">Info</string>

    <string name="indicator_poultry">Mit Geflügelfleisch</string>
    <string name="indicator_pork">Mit Schweinefleisch</string>
    <string name="indicator_beef">Mit Rindfleisch</string>
    <string name="indicator_fish">Mit Fisch</string>
    <string name="indicator_vegan">Vegan</string>
    <string name="indicator_vital">Vital</string>
    <string name="indicator_vegetabil">Ausgewogene Ernährung</string>

    <string name="about_dev">Design &amp; Entwicklung</string>
    <string name="about_dev_val">Stephan Schultz</string>
    <string name="about_dev_web">http://steppschuh.net</string>

    <string name="about_data">Speiseplan</string>
    <string name="about_data_val">OpenMensa</string>
    <string name="about_data_web">http://openmensa.org</string>

    <string name="about_icons">Iconset</string>
    <string name="about_icons_val">Icons8</string>
    <string name="about_icons_web">http://icons8.com</string>

</resources>
