<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green_light"
    tools:context="com.steppschuh.hpi.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/about_dev"
                    style="@style/textLightSub"/>

                <TextView
                    android:text="@string/about_dev_val"
                    style="@style/textLightMain"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/about_dev_web"
                        android:src="@drawable/ic_link"
                        style="@style/indicatorIcon"/>

                    <ImageView
                        android:id="@+id/about_dev_mail"
                        android:src="@drawable/ic_mail"
                        style="@style/indicatorIcon"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/about_data"
                    style="@style/textLightSub"/>

                <TextView
                    android:text="@string/about_data_val"
                    style="@style/textLightMain"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/about_data_web"
                        android:src="@drawable/ic_link"
                        style="@style/indicatorIcon"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/about_icons"
                    style="@style/textLightSub"/>

                <TextView
                    android:text="@string/about_icons_val"
                    style="@style/textLightMain"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/about_icons_web"
                        android:src="@drawable/ic_link"
                        style="@style/indicatorIcon"/>

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>



</RelativeLayout>
